# telegram-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
http-server/: http-api.py  http-server.py  telegram.py
mcp-server/: mcp-server.py
