[project]
name = "telegram-mcp"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "mcp[cli]>=1.6.0",
    "requests>=2.32.3",
    "telethon>=1.39.0",
    "uvloop>=0.21.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.2",
]
